Criação da tela Autocadastro

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -37,7 +37,7 @@
                         </div>
 
                         <div class="container-link mt-auto">
-                            <a id="text-cadastro">Não possui cadastro? </a><a id="text-cadastro-link" routerLink="">Criar conta</a>
+                            <a id="text-cadastro">Não possui cadastro? </a><a id="text-cadastro-link" routerLink="/cadastro">Criar conta</a>
                         </div>
 
                         <div class="container-button">
