--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -45,11 +45,14 @@
                                     <label for="telefone">Telefone:</label>
                                 </div>
                             </div>
+                            <div class="container-link mt-auto">
+                                <a id="text-login">Já possui conta? </a><a id="text-login-link" routerLink="/login">Fazer Login</a>
+                            </div>
                             <div class="container-button">
                                 <button type="submit" class="btn btn-primary custom-btn" (click)="cadastro()" [disabled]="!formCadastro.form.valid">Cadastrar</button>
                             </div>
-                            </div>
-                      </form>
+                        </div>
+                    </form>
                 <div>
             </div>
           </div>
