Implementação de rotas login-cadastro bidirecionais
Importação da classe "RouterLink" nos componentes login.ts e cadastro.ts, para que o link path no html funcione.

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -19,7 +19,7 @@
                                 </div>
                             </div>
                             <div *ngIf="email.errors && (email.dirty || email.touched)" class="left-align text-danger">
-                                <div [hidden]="!email?.errors?.['required']">Insira seu email</div>
+                                <div [hidden]="!email?.errors?.['required']">Insira seu e-mail</div>
                             </div>
                         </div>
 
