Pequeno ajuste no estilo da tela cadastro

--- a/src/app/pages/cadastro/cadastro.component.css
+++ b/src/app/pages/cadastro/cadastro.component.css
@@ -39,7 +39,7 @@ body {
     padding-bottom: 25px;
 }
 
-#login-text {
+#cadastro-text {
     text-align: left;
     font-size: 30px;
     font-weight: 300;
