--- a/src/app/pages/pedido/pedido.component.html
+++ b/src/app/pages/pedido/pedido.component.html
@@ -37,6 +37,9 @@
         <span id="dias"></span>
       </p>
     </div>
+    <div class="cancelar">
+      <button id="cancelar">Cancelar</button>
+    </div>
   </div>
   <script>
     document.getElementById('addRoupa').addEventListener('click', function () {
