Correção de imput e botão do login.component
Corrigi o espaçamento entre imput e text label dos campos de email e password, bem como tornei o tamanho do botão de login definido.

--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -61,6 +61,10 @@ body {
     color: #32445c;
 }
 
+.form-floating label {
+    margin-top: -2px;
+}
+
 .form-floating input:focus ~ label {
     color: #6b6771;
 }
@@ -106,6 +110,7 @@ body {
     font-size: 18px;
     cursor: pointer; 
     letter-spacing: inherit;
+    width: 120px;
 }
 
 .custom-btn:hover {
