--- a/src/app/pages/pedido/pedido.component.html
+++ b/src/app/pages/pedido/pedido.component.html
@@ -37,8 +37,11 @@
         <span id="dias"></span>
       </p>
     </div>
-    <div class="cancelar">
-      <button id="cancelar">Cancelar</button>
+    <div class="botoes">
+      <button id="aprovar">Aprovar</button>
+      <!--<div class="cancelar"> removido para deixar os botoes lado a lado-->
+        <button id="cancelar">Cancelar</button>
+      <!--</div>-->
     </div>
   </div>
   <script>
