--- a/src/app/cliente-pages/consulta-pedido/consulta-pedido.component.html
+++ b/src/app/cliente-pages/consulta-pedido/consulta-pedido.component.html
@@ -1,5 +1,5 @@
 <div class="background">
-    <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+    <div class="d-flex justify-content-center align-items-center" style="min-height: calc(100vh - 80px);">
         <div class="container">
             <div class="card shadow-lg custom-card border-0">
                 <div class="card-body">
