--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,19 +1,62 @@
 
-<nav class="navbar navbar-expand-md n" style="background-color: #32445c">
-    <a class="navbar-brand nav-link" href="#" routerLink="pedidos" style="margin-left: 20px">
-        <img src="assets/logo-lol.png" alt="Logo" style="width: 45px; height: 45px;">
-    </a>
-    <div class="navbar-collapse collapsed" id="navbarContent">
-        <ul class="navbar-nav navbar-links ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#" routerLink="pedidos">Pedidos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#" routerLink="pedido">Pedido</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#" routerLink="consulta-pedido">Consultar Pedido</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+<div *ngIf="tipo === 'cliente'">
+    <nav class="navbar navbar-expand-md n" style="background-color: #32445c">
+        <a class="navbar-brand nav-link" [routerLink]="['pedidos']" style="margin-left: 20px">
+            <img src="assets/logo-lol.png" alt="Logo" style="width: 45px; height: 45px;">
+        </a>
+        <div class="navbar-collapse collapsed" id="navbarContent">
+            <ul class="navbar-nav navbar-links ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['pedidos']">Início</a>
+                </li>
+                <li class="nav-item" ngbDropdown>
+                    <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown" role="button">Pedidos</a>
+                    <div ngbDropdownMenu aria-labelledby="navbarDropdown" class="dropdown-menu custom-dropdown-menu">
+                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['pedido']">Novo</a>
+                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['pedidos']">Listar</a>
+                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['manutencao-roupa']">Consultar</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" (click)="sair()">Sair</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
+<div *ngIf="tipo === 'funcionario'">
+    <nav class="navbar navbar-expand-md n" style="background-color: #32445c">
+        <a class="navbar-brand nav-link" [routerLink]="['pedidos']" style="margin-left: 20px">
+            <img src="assets/logo-lol.png" alt="Logo" style="width: 45px; height: 45px;">
+        </a>
+        <div class="navbar-collapse collapsed" id="navbarContent">
+            <ul class="navbar-nav navbar-links ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['']">Início</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['']">Visualizar Pedidos</a>
+                </li>
+                <li class="nav-item" ngbDropdown>
+                    <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown" role="button">Gerenciar</a>
+                    <div ngbDropdownMenu aria-labelledby="navbarDropdown" class="dropdown-menu custom-dropdown-menu">
+                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['manutencao-roupa']">Roupas</a>
+                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['']">Funcionários</a>
+                    </div>
+                </li>
+                <li class="nav-item" ngbDropdown>
+                    <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown" role="button">Relatórios</a>
+                    <div ngbDropdownMenu aria-labelledby="navbarDropdown" class="dropdown-menu custom-dropdown-menu">
+                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['']">Receitas</a>
+                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['']">Clientes</a>
+                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['']">Clientes Fiéis</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" (click)="sair()">Sair</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
+
