Adição na RF016 - Manutenção de Peças de Roupas
Criei 3 modais: Adicionar, Editar, Excluir, e o Listar já incluso na tela definitiva de manutenção de peças de roupas para futuramente satisfazer o CRUD solicitado pelo professor para esta tela. Já incluí verificações de campos e o auto fetch ao voltar dos modais para a tela de manutenção de peças de roupas

--- a/src/app/funcionario-pages/manutencao-roupas/manutencao-roupas.component.css
+++ b/src/app/funcionario-pages/manutencao-roupas/manutencao-roupas.component.css
@@ -134,6 +134,10 @@ body {
     width: fit-content;
 }
 
+.body-with-navbar {
+    min-height: calc(100vh - 60px);
+}
+
 .container-table .table thead tr{
     position: sticky;
     top: 0;
