Correções de funcionalidades em Login, Consulta Pedido e Manutenção de roupas
1) Incluí hover nos inputs de texto;
2) Corrigi problema de valor monetário, exibia R$, mas nao formatava da forma correta os numeros com mascará monetária do real.

--- a/src/app/cliente-pages/consulta-pedido/consulta-pedido.component.html
+++ b/src/app/cliente-pages/consulta-pedido/consulta-pedido.component.html
@@ -66,15 +66,15 @@
                                     </tr>
                                 </thead>
                                 <tbody class="table-items-body custom-tr-items">
-                                    <tr *ngFor="let item of pedido.roupas; let i = index">
+                                    <tr *ngFor="let item of pedido.roupas;">
                                         <td>{{ item.roupa }}</td>
-                                        <td>{{ item.preco | currency:'BRL' }}</td>
+                                        <td>R${{ formatarValor(item.preco) }}</td>
                                     </tr>
                                 </tbody>
                                 <tfoot>
                                     <tr class="custom-headers-tfoot"> 
                                         <th>Itens totais: {{ totalItens }}</th>
-                                        <th>Valor total: {{ precoTotal | currency:'BRL' }}</th>
+                                        <th>Valor total: R${{ formatarValor(precoTotal) }}</th>
                                     </tr>
                                 </tfoot>
                             </table>
