--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -74,6 +74,12 @@ body {
     box-shadow: 0 0 0 0.2rem #a5d7f3;
 }
 
+.custom-input:hover {
+    outline: none;
+    border-color: #6fb5df;
+    cursor: text;
+}
+
 .invalid-border {
     border-color: red;
 }
