--- a/src/app/funcionario-pages/manutencao-roupas/manutencao-roupas-modais/editar-roupas-modal/editar-roupas-modal.component.css
+++ b/src/app/funcionario-pages/manutencao-roupas/manutencao-roupas-modais/editar-roupas-modal/editar-roupas-modal.component.css
@@ -81,6 +81,12 @@
     box-shadow: 0 0 0 0.2rem #a5d7f3;
 }
 
+.custom-input:hover {
+    outline: none;
+    border-color: #6fb5df;
+    cursor: text;
+}
+
 .invalid-border {
     border-color: red;
 }
