--- a/src/app/funcionario-pages/manutencao-roupas/manutencao-roupas.component.html
+++ b/src/app/funcionario-pages/manutencao-roupas/manutencao-roupas.component.html
@@ -26,10 +26,10 @@
                                     </tr>
                                 </thead>
                                 <tbody class="table-items-body custom-tr-items">
-                                    <tr *ngFor="let item of orderRoupa; let i = index">
+                                    <tr *ngFor="let item of orderRoupa;">
                                         <td style="width: 54%;">{{ item.roupa }}</td>
                                         <td style="width: 20%;">{{ formatarMinutosParaDiasUteis(item.tempoDeServicoMinutos) }}</td>
-                                        <td style="width: 10%;">{{ item.preco | currency:'BRL' }}</td>
+                                        <td style="width: 10%;">R${{ formatarValor(item.preco) }}</td>
                                         <td style="width: 8%; text-align: center; border-right: none;"><button type="button" class="btn-table btn-edit" (click)="editar(item)">Editar</button></td>
                                         <td style="width: 8%; text-align: center;"><button type="button" class="btn-table btn-remove" (click)="excluir(item)">Excluir</button></td>
                                     </tr>
