Implementado a RF018 e suas inclusões em navbar e rotas / Incluído navbar padrão no projeto
1) Implementei a tela de relatório de receitas RF018 e suas funcionalidades como geração de relatório e PDF.
2) Incluí o caminho da RF018 na navbar;
3) Implementei a navbar padrão para todo o projeto, exceto para tela login e cadastro.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -47,7 +47,7 @@
                 <li class="nav-item" ngbDropdown>
                     <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown" role="button">Relatórios</a>
                     <div ngbDropdownMenu aria-labelledby="navbarDropdown" class="dropdown-menu custom-dropdown-menu">
-                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['']">Receitas</a>
+                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['relatorio-receitas']">Receitas</a>
                         <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['']">Clientes</a>
                         <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['']">Clientes Fiéis</a>
                     </div>
